# bits-marks-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  release.yml
api/: index.py
data/: config.json  feedback.json
data/marks/: 2026-S1.json
scripts/: install-just.sh  setup-local.sh
src/bits_marks_tracker/: __init__.py  app.py  scoring.py  storage.py
src/bits_marks_tracker/static/: index.html
tests/: test_api.py  test_bits_marks_tracker.py  test_scoring.py
