[project]
name = "bits-marks-tracker"
version = "0.1.0"
description = "Unofficial marks leaderboard for BITS Pilani WILP MTech AI/ML"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Niraj Kumar", email = "nirajkmr007@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/nirajkmr007/bits-marks-tracker"
Repository = "https://github.com/nirajkmr007/bits-marks-tracker"
Issues = "https://github.com/nirajkmr007/bits-marks-tracker/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bits_marks_tracker"]

# -----------------------------------------------------------------------------
# Dev dependencies (managed by uv: `uv sync` installs these)
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "uvicorn[standard]>=0.51.0",
]

# -----------------------------------------------------------------------------
# Ruff: linter + formatter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "PTH",      # use pathlib
    "RUF",      # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

# -----------------------------------------------------------------------------
# mypy: static type checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["src", "tests"]

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --cov=bits_marks_tracker --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/bits_marks_tracker"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
